tests/paczka1/fuzzy1/18956559.err
Error in line 3: 1E4Y6figiG S678 70,2
Error in line 2: nQQi7faWc2z S892 51,3
Error in line 20: eSfaDZb A917 43,7
Error in line 9: nQQi7faWc2z S678 53,8
Error in line 21: eSfaDZb A661 20,1
Error in line 23: s4YMy2 A661 13,3
Error in line 29: eSfaDZb S678 54,6
Error in line 26: 1E4Y6figiG A917 19,0
Error in line 28: A661 A661 55,4
